fix dark mode in project page

--- a/Css.css
+++ b/Css.css
@@ -343,8 +343,7 @@ img.gifpres{
 }
 
 .partD > img{
-    width: 30%;
-    
+    width: 50%;
 }
 
 .link_to_project{
